Remove OAK Logs

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ RSBot Scripts
 -------------
 
 
-Choppa
-------
+RS3: Choppa
+-----------
 
 A Simple Powerchopper for powerchopping Normal Logs in any Location!
